# zeroseal

./: .gitignore  .vercelignore  Cargo.toml  README.md  docker-compose.dev.yml  package.json  render.yaml
apps/api/: .env.example  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
apps/api/prisma/: schema.prisma
apps/api/src/: api-startup.spec.ts  app.module.ts  backfill-registration.ts  claim-flow.spec.ts  claims.controller.ts  claims.schemas.spec.ts  claims.schemas.ts  claims.service.ts  commitment-separation.spec.ts  common.ts  config.spec.ts  config.ts  continuations.service.spec.ts  continuations.service.ts  frontend-redesign.spec.ts  health.controller.spec.ts  health.controller.ts  lifecycle.spec.ts  lifecycle.ts  local-tooling.spec.ts  main.ts  prisma.service.ts  programmes.service.ts  proof.service.spec.ts  proof.service.ts  readiness.spec.ts  readiness.ts  (+14 more)
apps/web/: .gitignore  README.md  package-lock.json  package.json
circuits/proof_of_claim/: Nargo.toml  Prover.example.toml
circuits/proof_of_impact/: Nargo.toml  Prover.example.toml
circuits/spike/: Nargo.toml
contracts/claim_registry/: Cargo.toml
docs/: ARCHITECTURE_DECISION.md  BRAND_ASSETS.md  COMPETITION_ALIGNMENT.md  DEMO_CLICK_SEQUENCE.md  DEMO_RECORDING_CHECKLIST.md  DEMO_RUNBOOK.md  DEMO_SCRIPT_3MIN.md  DEMO_TRUTH_MATRIX.md  MILESTONE_0_RESULTS_TEMPLATE.md  PRODUCTION_ACCEPTANCE.md  PRODUCT_FLOW_TRUTH.md  PRODUCT_GLOSSARY.md  PUBLIC_PRIVATE_DATA_MAP.md  RENDER_DEPLOYMENT.md  SCOPE_LOCK.md
scripts/: check-environment.ps1  check-environment.sh  demo_claim_registry.sh
(+65 files in other folders)
