[workspace]
resolver = "2"
members = [
    "contracts/claim_registry",
]

[workspace.dependencies]
soroban-sdk = "=27.0.0-rc.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
