[workspace]
resolver = "2"
members = [
    "contracts/claim_registry",
]

[workspace.dependencies]
soroban-sdk = { version = "=26.0.1", default-features = false }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
